--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-            <div class="testing">ide gas</div>
+            <div class="testing">ide gass</div>
     
         <section class="content">
             <!-- Add your main content here -->
