--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 </div>
             </div>
         </div>
-            <div class="testing">ide gass</div>
+            <div class="testing">Welcome</div>
+            <img src="" alt="">
     
         <section class="content">
             <!-- Add your main content here -->
