--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Uptown</title>
 </head>
-<body>
     <body>
         <div class="header">
-            <nav class="navbar">
+            <nav class="navbar" id="header-prio">
                 <ul>
                     <!-- <li><img class="logo" src="images/uptown-logo.jpg" alt=""></li> -->
                     <li><a href="#about">About</a></li>
@@ -27,7 +26,7 @@
                 </div>
             </div>
         </div>
-            <div class="testing">Welcome</div>
+            <div class="testing">Welcome To Phiily's premier beer garden!</div>
             <img src="" alt="">
     
         <section class="content">
