--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/normalise.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Uptown</title>
+    <script src="https://kit.fontawesome.com/35350b91bd.js" crossorigin="anonymous"></script>
 </head>
     <body>
         <div class="header">
@@ -26,11 +27,34 @@
                 </div>
             </div>
         </div>
-            <div class="testing">Welcome To Phiily's premier beer garden!</div>
-            <img src="" alt="">
-    
-        <section class="content">
-            <!-- Add your main content here -->
-        </section>
+        <div class="testing">
+            <h1>Welcome To Phiily's premier beer garden!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis magni quam modi?
+                Consequuntur facere, quia quas fuga pariatur hic a earum harum quaerat, nulla facilis.</p>
+            </div>
+                
+                <div class="list-of-fun">
+                    <ul>
+                        <li>
+                            <div class="icon-text">
+                                <i class="fa-regular fa-beer-mug-empty"></i>
+                                <span>Lorem ipsum dolor sit amet consectetur.</span>
+                            </div class="icon-text">
+                        </li>
+                        <li>
+                            <div class="icon-text">
+                                <i class="fa-regular fa-beer-mug-empty"></i>
+                                <span>Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <i class="fa-regular fa-beer-mug-empty"></i>
+                                <span>Lorem ipsum dolor sit amet consectetur.</span>
+                            </div>
+                        </li>
+                    </ul>
+            <!-- <img src="" alt=""> -->
+        </div>
 </body>
 </html>
