--- a/index.html
+++ b/index.html
@@ -37,24 +37,25 @@
                     <ul>
                         <li>
                             <div class="icon-text">
-                                <i class="fa-regular fa-beer-mug-empty"></i>
+                                <i class="fa-solid fa-beer-mug-empty fa-2x"></i>
                                 <span>Lorem ipsum dolor sit amet consectetur.</span>
                             </div class="icon-text">
                         </li>
                         <li>
                             <div class="icon-text">
-                                <i class="fa-regular fa-beer-mug-empty"></i>
+                                <i class="fa-solid fa-beer-mug-empty fa-2x"></i>
                                 <span>Lorem ipsum dolor sit amet consectetur.</span>
                             </div>
                         </li>
                         <li>
                             <div>
-                                <i class="fa-regular fa-beer-mug-empty"></i>
+                                <i class="fa-solid fa-beer-mug-empty fa-2x"></i>
                                 <span>Lorem ipsum dolor sit amet consectetur.</span>
                             </div>
                         </li>
                     </ul>
+                    <p> Check the menus?</p>
+                </div>
             <!-- <img src="" alt=""> -->
-        </div>
 </body>
 </html>
