getting somewhere, images

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                     </ul>
                     <p> Check the menus?</p>
                 </div>
+                <div class="menus">
+                    <div class="container">
+                        <img class="menu drinks" src="images/drink-menu.jpg" alt="drinks">
+                        <button>ide gas</button>
+                    </div>
+                    <div class="container">
+                        <img class="menu food" src="images/food-menu.jpg" alt="food">
+                    </div>
+                </div>
             <!-- <img src="" alt=""> -->
 </body>
 </html>
