getting somewhere, images

--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
                 <div class="menus">
                     <div class="container">
                         <img class="menu drinks" src="images/drink-menu.jpg" alt="drinks">
-                        <button>ide gas</button>
+                        <button class="drink-button">ide gas</button>
                     </div>
                     <div class="container">
-                        <img class="menu food" src="images/food-menu.jpg" alt="food">
+                        <img class="menu food"  src="images/food-menu.jpg" alt="food">
                     </div>
+                </div>
+                <div class="location">
+                    <p>gassssss</p>
                 </div>
             <!-- <img src="" alt=""> -->
 </body>
